--- a/src/exercicios/02/index.html
+++ b/src/exercicios/02/index.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Página com Menu Responsivo Lateral</title>
-</head>
-<body>
-    <header>
-        <nav class="menu">
-            <img src="https://via.placeholder.com/100x50" class="logo" alt="Logo da Página">
-            <button class="menu-toggle">&#9776;</button>
-            <ul class="menu-items">
-                <li><a href="#">Perfil</a></li>
-                <li><a href="#">Postagens</a></li>
-                <li><a href="#">Amigos</a></li>
-                <li><a href="#">Fotos</a></li>
-                <li><a href="#">Vídeos</a></li>
-                <li><a href="#">Configurações</a></li>
-                <li><a href="#">Mensagens</a></li>
-                <li><a href="#">Notificações</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <p>Conteúdo principal da página.</p>
-    </main>
-
-    <script src="script.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AT 02</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="main.jsx"></script>
+  </body>
 </html>
